# RobotProgramming2

./: README.md  pyproject.toml  run_control.py  run_sim.py
.github/workflows/: ci.yml
communication/: zmq_bridge.py
config/: robot.xml
controller/: pd_controller.py
simulator/: env.py  kinematics.py
src/manipulator_2d/: __init__.py  cli.py  constants.py  logging_config.py
src/manipulator_2d/communication/: __init__.py  zmq_bridge.py
src/manipulator_2d/config/: robot.xml
src/manipulator_2d/controller/: __init__.py  pd_controller.py
src/manipulator_2d/simulator/: __init__.py  env.py  kinematics.py
tests/: conftest.py  test_kinematics.py  test_pd_controller.py  test_simulator.py  test_zmq_bridge.py
